# scaling-waffles

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  ddc_main.cpp  hardware_main.cpp  main.cpp  test_main.cpp  test_main2.cpp  test_main_my_task.hpp
src/sauter/data/: serial_number.hpp  uuid.hpp
src/sauter/data/project/: project.hpp
src/sauter/data/project/data_point/: data_point.hpp
src/sauter/data/project/ddc/: block.hpp  task.hpp  value.hpp
src/sauter/data/project/group_communication/: group.hpp
src/sauter/data/project/hardware/: device.hpp
src/sauter/real_device/ddc/: block_interface.hpp  item.hpp  task.hpp
src/sauter/real_device/ddc/block/: blocks.hpp  blocks.hpp.in
src/sauter/real_device/ddc/block/addition/: addition.hpp
src/sauter/real_device/ddc/detail/: block_crtp.hpp  factory.hpp  traits.hpp
